fix(translate): support keyless providers on API 26